# MangaLineExtraction_PyTorch

./: MangaLineExtraction.ipynb  README.md  pyproject.toml  tox.ini
mangalineextraction/: model.py
src/: building_blocks.py  helper.py  model.py
