[tool.poetry]
name = "mangalineextraction"
version = "0.1.0"
description = ""
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
poethepoet = "^0.12.1"
pytest = "^6.2.5"

[tool.black]
line-length = 120

[tool.poe.tasks]
cuda113 = "pip install torch==1.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
